<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_liso_azul"
    android:orientation="horizontal"
    tools:context=".ComoJugar_1">

    <HorizontalScrollView
        android:id="@+id/ScrollView_comojugar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagen_comojugar12"
                android:layout_width="650dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagen_comojugar12"
                app:srcCompat="@drawable/como_jugar_1b" />

            <ImageView
                android:id="@+id/imagen_comojugar1"
                android:layout_width="650dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagen_comojugar1"
                app:srcCompat="@drawable/como_jugar_1a" />

            <ImageView
                android:id="@+id/imagen_comojugar13"
                android:layout_width="650dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagen_comojugar13"
                app:srcCompat="@drawable/como_jugar_1c" />

            <ImageButton
                android:id="@+id/boton_comosejuega1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/boton_comosejuega1"
                app:srcCompat="@drawable/como_jugar_flecha_siguiente" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>