<?xml version="1.0" encoding="utf-8"?>

<!-- AQUÍ SE COLOCA EL FONDO DE PANTALLA DEL ACTIVITY, SE CAMBIA LA ORIENTACIÓN A HORIZONTAL Y SE RELACIONA EL XML CON LA CLASE CORRESPONDIENTE-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_coronavirus"
    android:orientation="horizontal"
    tools:context=".PantallaFinal">

    <!-- AQUÍ ESTÁN LAS CARACTERISTICAS DEL BOTÓN VOLVER A JUGAR QUE TE LLEVA A LA PANTALLA ESCENARIO CASA -->

    <!-- AQUÍ ESTÁN LAS CARACTERISTICAS DEL BOTÓN VOLVER AL MENÚ QUE TE LLEVA A LA PANTALLA MAIN ACTIVITY -->
    <Button
        android:id="@+id/boton_volver_a_jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="volverajugar"
        android:text="@string/boton_volver_a_jugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/boton_volver_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="menuprincipal"
        android:text="@string/boton_volver_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <!-- AQUÍ ESTÁN LAS CARACTERISTICAS DEL TEXTO QUE APARECE EN LA PANTALLA "¡CAMINO ACABADO!" -->
    <TextView
        android:id="@+id/texto_camino_acabado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_final_historia"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/mensajeFinal"
        android:layout_width="367dp"
        android:layout_height="202dp"
        android:gravity="center"
        android:text="@string/mensajeFinal"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/porciento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porciento"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.829" />

</androidx.constraintlayout.widget.ConstraintLayout>