<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_coronavirus"
    android:orientation="horizontal"
    tools:context=".MenuJuego">

    <!-- Aquí implementamos la imagen de la flecha_volver_atras que nos lleva
     a la pantalla inicial-->
    <ImageButton
        android:id="@+id/btnVolver"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/flechaatras_escenarios"
        android:padding="0px"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/flecha_volver_atras" />

    <!-- Aquí implementamos el texto donde se escribe el título de la pantalla-->
    <TextView
        android:id="@+id/titulo_escenarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titulo_escenarios"
        android:text="@string/titulo_escenarios"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <!-- Implementamos el ScrollView de la pantalla de escenarios-->
    <ScrollView
        android:id="@+id/scrollview_escenarios"
        android:layout_width="731dp"
        android:layout_height="323dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Implementamos el botón 'menu_boton_supermercado', donde relacionamos esta parte del diseño
     con la parte lógica que se encontrará en el método menu_boton_supermercado de la clase Jugar-->
            <ImageView
                android:id="@+id/btnHistoriaSupermercado"
                android:layout_width="match_parent"
                android:layout_height="231dp"
                android:contentDescription="@string/boton_supermercado"
                app:srcCompat="@drawable/menu_boton_supermercado" />

            <!-- Esta parte simplemnete nos servirá de menu_separador entre los dos botones-->
            <ImageView
                android:id="@+id/espacio_boton"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:contentDescription="@string/espaciador"
                app:srcCompat="@drawable/menu_separador" />

            <!-- Implementamos el botón 'menu_boton_instituto', donde relacionamos esta parte del diseño
    con la parte lógica que se encontrará en el método menu_boton_instituto de la clase Jugar-->
            <ImageView
                android:id="@+id/btnHistoriaInstituo"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:contentDescription="@string/boton_instituto"
                app:srcCompat="@drawable/menu_boton_instituto" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>