<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instituto_salida_metro_o_andando"
    android:orientation="horizontal"
    tools:context=".COL_SalidaMetroOAndando">

    <!-- AQUÍ ESTÁN LAS CARACTERISTICAS DEL BOTÓN ECHAR GEL Y PONER GUANTES QUE TE LLEVA A LA COLA DEL SUPERMERCADO -->

    <TextView
        android:id="@+id/texto_volver_a_casa"
        android:layout_width="286dp"
        android:layout_height="31dp"
        android:background="#FFFFFF"
        android:text="@string/texto_volver_a_casa"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/boton_en_metro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="enMetro"
        android:text="@string/boton_en_metro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />

    <!-- AQUÍ ESTÁN LAS CARACTERISTICAS DEL BOTÓN NO HACER NADA QUE HACE QUE APAREZCA UN MENSAJE EMERGENTE -->
    <Button
        android:id="@+id/boton_andando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irAndando"
        android:text="@string/boton_ir_andando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />


    <!-- Implementamos la barra de progreso del porcentaje de contagio, donde relacionamos esta
    parte del diseño con la parte lógica que se encontrará en la clase EscenarioCasa-->

    <ProgressBar
        android:id="@+id/barra1"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="398dp"
        android:layout_height="33dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="10"
        android:progressDrawable="@drawable/customprogressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>